# email-triage-env

./: Dockerfile  README.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
email_triage_env/: __init__.py  data.py  env.py  graders.py  models.py  server.py
server/: __init__.py  app.py
